fix transRedord td contrast

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -15,6 +15,7 @@
   --secondary-light-green: #B4BFA3;
   --primary-light-green: #D8D9C5;
   --cream: #F2EAE4;
+  --light-cream: #fdf4ee;
   --green-highlight: rgb(199, 207, 206);
 }
 
