--- a/src/features/budgets/budgets.css
+++ b/src/features/budgets/budgets.css
@@ -63,8 +63,8 @@
 
 .budget-form .submit-button:hover,
 .budget-form .submit-button:focus {
-  background-color: #141c3a;
-  color: #ffffff;
+  background-color: var(--primary-light-green);
+  color: #000;
 }
 
 .budget-form .submit-button.prevent {
@@ -74,7 +74,7 @@
 
 
 .remaining-funds.positive {
-  color: var(--blue);
+  color: green;
 }
 
 .remaining-funds.negative {
